lib/bindings/quiche_bindings.g.dart


  void quiche_config_set_max_ack_delay(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_max_ack_delay ??= _dylib.lookupFunction<
            _c_quiche_config_set_max_ack_delay,
            _dart_quiche_config_set_max_ack_delay>(
        'quiche_config_set_max_ack_delay');
    return _quiche_config_set_max_ack_delay(
      config,
      v,
    );
  }

  _dart_quiche_config_set_max_ack_delay _quiche_config_set_max_ack_delay;

  void quiche_config_set_disable_active_migration(
    ffi.Pointer<Config> config,
    bool v,
  ) {
    _quiche_config_set_disable_active_migration ??= _dylib.lookupFunction<
            _c_quiche_config_set_disable_active_migration,
            _dart_quiche_config_set_disable_active_migration>(
        'quiche_config_set_disable_active_migration');
    return _quiche_config_set_disable_active_migration(
      config,
      v ? 1 : 0,
    );
  }

  _dart_quiche_config_set_disable_active_migration
      _quiche_config_set_disable_active_migration;

  void quiche_config_set_cc_algorithm(
    ffi.Pointer<Config> config,
    int algo,
  ) {
    _quiche_config_set_cc_algorithm ??= _dylib.lookupFunction<
        _c_quiche_config_set_cc_algorithm,
        _dart_quiche_config_set_cc_algorithm>('quiche_config_set_cc_algorithm');
    return _quiche_config_set_cc_algorithm(
      config,
      algo,
    );
  }

  _dart_quiche_config_set_cc_algorithm _quiche_config_set_cc_algorithm;

  void quiche_config_enable_hystart(
    ffi.Pointer<Config> config,
    bool v,
  ) {
    _quiche_config_enable_hystart ??= _dylib.lookupFunction<
        _c_quiche_config_enable_hystart,
        _dart_quiche_config_enable_hystart>('quiche_config_enable_hystart');
    return _quiche_config_enable_hystart(
      config,
      v ? 1 : 0,
    );
  }

  _dart_quiche_config_enable_hystart _quiche_config_enable_hystart;

  void quiche_config_free(
    ffi.Pointer<Config> config,
  ) {
    _quiche_config_free ??=
        _dylib.lookupFunction<_c_quiche_config_free, _dart_quiche_config_free>(
            'quiche_config_free');
    return _quiche_config_free(
      config,
    );
  }

  _dart_quiche_config_free _quiche_config_free;

  int quiche_header_info(
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
    int dcil,
    ffi.Pointer<ffi.Uint32> version,
    ffi.Pointer<ffi.Uint8> type,
    ffi.Pointer<ffi.Uint8> scid,
    ffi.Pointer<ffi.Uint64> scid_len,
    ffi.Pointer<ffi.Uint8> dcid,
    ffi.Pointer<ffi.Uint64> dcid_len,
    ffi.Pointer<ffi.Uint8> token,
    ffi.Pointer<ffi.Uint64> token_len,
  ) {
    _quiche_header_info ??=
        _dylib.lookupFunction<_c_quiche_header_info, _dart_quiche_header_info>(
            'quiche_header_info');
    return _quiche_header_info(
      buf,
      buf_len,
      dcil,
      version,
      type,
      scid,
      scid_len,
      dcid,
      dcid_len,
      token,
      token_len,
    );
  }

  _dart_quiche_header_info _quiche_header_info;

  ffi.Pointer<Connection> quiche_accept(
    ffi.Pointer<ffi.Uint8> scid,
    int scid_len,
    ffi.Pointer<ffi.Uint8> odcid,
    int odcid_len,
    ffi.Pointer<Config> config,
  ) {
    _quiche_accept ??= _dylib
        .lookupFunction<_c_quiche_accept, _dart_quiche_accept>('quiche_accept');
    return _quiche_accept(
      scid,
      scid_len,
      odcid,
      odcid_len,
      config,
    );
  }

  _dart_quiche_accept _quiche_accept;

  ffi.Pointer<Connection> quiche_connect(
    ffi.Pointer<ffi.Int8> server_name,
    ffi.Pointer<ffi.Uint8> scid,
    int scid_len,
    ffi.Pointer<Config> config,
  ) {
    _quiche_connect ??=
        _dylib.lookupFunction<_c_quiche_connect, _dart_quiche_connect>(
            'quiche_connect');
    return _quiche_connect(
      server_name,
      scid,
      scid_len,
      config,
    );
  }

  _dart_quiche_connect _quiche_connect;

  int quiche_negotiate_version(
    ffi.Pointer<ffi.Uint8> scid,
    int scid_len,
    ffi.Pointer<ffi.Uint8> dcid,
    int dcid_len,
    ffi.Pointer<ffi.Uint8> out,
    int out_len,
  ) {
    _quiche_negotiate_version ??= _dylib.lookupFunction<
        _c_quiche_negotiate_version,
        _dart_quiche_negotiate_version>('quiche_negotiate_version');
    return _quiche_negotiate_version(
      scid,
      scid_len,
      dcid,
      dcid_len,
      out,
      out_len,
    );
  }

  _dart_quiche_negotiate_version _quiche_negotiate_version;

  int quiche_retry(
    ffi.Pointer<ffi.Uint8> scid,
    int scid_len,
    ffi.Pointer<ffi.Uint8> dcid,
    int dcid_len,
    ffi.Pointer<ffi.Uint8> new_scid,
    int new_scid_len,
    ffi.Pointer<ffi.Uint8> token,
    int token_len,
    int version,
    ffi.Pointer<ffi.Uint8> out,
    int out_len,
  ) {
    _quiche_retry ??= _dylib
        .lookupFunction<_c_quiche_retry, _dart_quiche_retry>('quiche_retry');
    return _quiche_retry(
      scid,
      scid_len,
      dcid,
      dcid_len,
      new_scid,
      new_scid_len,
      token,
      token_len,
      version,
      out,
      out_len,
    );
  }

  _dart_quiche_retry _quiche_retry;

  bool quiche_version_is_supported(
    int version,
  ) {
    _quiche_version_is_supported ??= _dylib.lookupFunction<
        _c_quiche_version_is_supported,
        _dart_quiche_version_is_supported>('quiche_version_is_supported');
    return _quiche_version_is_supported(
          version,
        ) !=
        0;
  }

  _dart_quiche_version_is_supported _quiche_version_is_supported;

  ffi.Pointer<Connection> quiche_conn_new_with_tls(
    ffi.Pointer<ffi.Uint8> scid,
    int scid_len,
    ffi.Pointer<ffi.Uint8> odcid,
    int odcid_len,
    ffi.Pointer<Config> config,
    ffi.Pointer<ffi.Void> ssl,
    bool is_server,
  ) {
    _quiche_conn_new_with_tls ??= _dylib.lookupFunction<
        _c_quiche_conn_new_with_tls,
        _dart_quiche_conn_new_with_tls>('quiche_conn_new_with_tls');
    return _quiche_conn_new_with_tls(
      scid,
      scid_len,
      odcid,
      odcid_len,
      config,
      ssl,
      is_server ? 1 : 0,
    );
  }

  _dart_quiche_conn_new_with_tls _quiche_conn_new_with_tls;

  bool quiche_conn_set_keylog_path(
    ffi.Pointer<Connection> conn,
    ffi.Pointer<ffi.Int8> path,
  ) {
    _quiche_conn_set_keylog_path ??= _dylib.lookupFunction<
        _c_quiche_conn_set_keylog_path,
        _dart_quiche_conn_set_keylog_path>('quiche_conn_set_keylog_path');
    return _quiche_conn_set_keylog_path(
          conn,
          path,
        ) !=
        0;
  }

  _dart_quiche_conn_set_keylog_path _quiche_conn_set_keylog_path;

  void quiche_conn_set_keylog_fd(
    ffi.Pointer<Connection> conn,
    int fd,
  ) {
    _quiche_conn_set_keylog_fd ??= _dylib.lookupFunction<
        _c_quiche_conn_set_keylog_fd,
        _dart_quiche_conn_set_keylog_fd>('quiche_conn_set_keylog_fd');
    return _quiche_conn_set_keylog_fd(
      conn,
      fd,
    );
  }

  _dart_quiche_conn_set_keylog_fd _quiche_conn_set_keylog_fd;

  bool quiche_conn_set_qlog_path(
    ffi.Pointer<Connection> conn,
    ffi.Pointer<ffi.Int8> path,
    ffi.Pointer<ffi.Int8> log_title,
    ffi.Pointer<ffi.Int8> log_desc,
  ) {
    _quiche_conn_set_qlog_path ??= _dylib.lookupFunction<
        _c_quiche_conn_set_qlog_path,
        _dart_quiche_conn_set_qlog_path>('quiche_conn_set_qlog_path');
    return _quiche_conn_set_qlog_path(
          conn,
          path,
          log_title,
          log_desc,
        ) !=
        0;
  }

  _dart_quiche_conn_set_qlog_path _quiche_conn_set_qlog_path;

  void quiche_conn_set_qlog_fd(
    ffi.Pointer<Connection> conn,
    int fd,
    ffi.Pointer<ffi.Int8> log_title,
    ffi.Pointer<ffi.Int8> log_desc,
  ) {
    _quiche_conn_set_qlog_fd ??= _dylib.lookupFunction<
        _c_quiche_conn_set_qlog_fd,
        _dart_quiche_conn_set_qlog_fd>('quiche_conn_set_qlog_fd');
    return _quiche_conn_set_qlog_fd(
      conn,
      fd,
      log_title,
      log_desc,
    );
  }

  _dart_quiche_conn_set_qlog_fd _quiche_conn_set_qlog_fd;

  int quiche_conn_recv(
    ffi.Pointer<Connection> conn,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
  ) {
    _quiche_conn_recv ??=
        _dylib.lookupFunction<_c_quiche_conn_recv, _dart_quiche_conn_recv>(
            'quiche_conn_recv');
    return _quiche_conn_recv(
      conn,
      buf,
      buf_len,
    );
  }

  _dart_quiche_conn_recv _quiche_conn_recv;

  int quiche_conn_send(
    ffi.Pointer<Connection> conn,
    ffi.Pointer<ffi.Uint8> out,
    int out_len,
  ) {
    _quiche_conn_send ??=
        _dylib.lookupFunction<_c_quiche_conn_send, _dart_quiche_conn_send>(
            'quiche_conn_send');
    return _quiche_conn_send(
      conn,
      out,
      out_len,
    );
  }

  _dart_quiche_conn_send _quiche_conn_send;

  int quiche_conn_stream_recv(
    ffi.Pointer<Connection> conn,
    int stream_id,
    ffi.Pointer<ffi.Uint8> out,
    int buf_len,
    ffi.Pointer<ffi.Uint8> fin,
  ) {
    _quiche_conn_stream_recv ??= _dylib.lookupFunction<
        _c_quiche_conn_stream_recv,
        _dart_quiche_conn_stream_recv>('quiche_conn_stream_recv');
    return _quiche_conn_stream_recv(
      conn,
      stream_id,
      out,
      buf_len,
      fin,
    );
  }

  _dart_quiche_conn_stream_recv _quiche_conn_stream_recv;

  int quiche_conn_stream_send(
    ffi.Pointer<Connection> conn,
    int stream_id,
    ffi.Pointer<ffi.Uint8> buf,
    int buf_len,
    bool fin,
  ) {
    _quiche_conn_stream_send ??= _dylib.lookupFunction<
        _c_quiche_conn_stream_send,
        _dart_quiche_conn_stream_send>('quiche_conn_stream_send');
    return _quiche_conn_stream_send(
      conn,
      stream_id,
      buf,
      buf_len,
      fin ? 1 : 0,
    );
  }

  _dart_quiche_conn_stream_send _quiche_conn_stream_send;

  int quiche_conn_stream_shutdown(
    ffi.Pointer<Connection> conn,
    int stream_id,
    int direction,
    int err,
  ) {
    _quiche_conn_stream_shutdown ??= _dylib.lookupFunction<
        _c_quiche_conn_stream_shutdown,
        _dart_quiche_conn_stream_shutdown>('quiche_conn_stream_shutdown');
    return _quiche_conn_stream_shutdown(
      conn,
      stream_id,
      direction,
      err,
    );
  }

  _dart_quiche_conn_stream_shutdown _quiche_conn_stream_shutdown;

  int quiche_conn_stream_capacity(
    ffi.Pointer<Connection> conn,
    int stream_id,
  ) {
    _quiche_conn_stream_capacity ??= _dylib.lookupFunction<
        _c_quiche_conn_stream_capacity,
        _dart_quiche_conn_stream_capacity>('quiche_conn_stream_capacity');
    return _quiche_conn_stream_capacity(
      conn,
      stream_id,
    );
  }

  _dart_quiche_conn_stream_capacity _quiche_conn_stream_capacity;

  bool quiche_conn_stream_finished(
    ffi.Pointer<Connection> conn,
    int stream_id,
  ) {
    _quiche_conn_stream_finished ??= _dylib.lookupFunction<
        _c_quiche_conn_stream_finished,
        _dart_quiche_conn_stream_finished>('quiche_conn_stream_finished');
    return _quiche_conn_stream_finished(
          conn,
          stream_id,
        ) !=
        0;
  }

  _dart_quiche_conn_stream_finished _quiche_conn_stream_finished;

  ffi.Pointer<StreamIter> quiche_conn_readable(
    ffi.Pointer<Connection> conn,
  ) {
    _quiche_conn_readable ??= _dylib.lookupFunction<_c_quiche_conn_readable,
        _dart_quiche_conn_readable>('quiche_conn_readable');
    return _quiche_conn_readable(
      conn,
    );
  }

  _dart_quiche_conn_readable _quiche_conn_readable;

  ffi.Pointer<StreamIter> quiche_conn_writable(
    ffi.Pointer<Connection> conn,
  ) {
    _quiche_conn_writable ??= _dylib.lookupFunction<_c_quiche_conn_writable,
        _dart_quiche_conn_writable>('quiche_conn_writable');
    return _quiche_conn_writable(
      conn,
    );
  }

  _dart_quiche_conn_writable _quiche_conn_writable;

  int quiche_conn_timeout_as_nanos(
    ffi.Pointer<Connection> conn,
  ) {
    _quiche_conn_timeout_as_nanos ??= _dylib.lookupFunction<
        _c_quiche_conn_timeout_as_nanos,
        _dart_quiche_conn_timeout_as_nanos>('quiche_conn_timeout_as_nanos');
    return _quiche_conn_timeout_as_nanos(
      conn,
    );
  }
